--- a/myapp/deployment.yaml
+++ b/myapp/deployment.yaml
@@ -16,3 +16,10 @@ spec:
       containers:
         - name: nginx
           image: nginx:latest
+          volumeMounts:
+            - name: config-volume
+              mountPath: /usr/share/nginx/html
+      volumes:
+        - name: config-volume
+          configMap:
+            name: myapp
